--- a/main.html
+++ b/main.html
@@ -8,9 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div >
+		<h1 id="f1">
+			Flowers photos
+		</h1>
+		<p>A flower is the reproductive structure of flowering plants. It typically consists of colorful petals, and the parts that produce pollen and seeds, like the stamens and pistils. Flowers are known for their vibrant colors and often pleasant smells</p>
+	</div>
+	<div >
+		<h1 id="f2">
+			Roses pictures
+		</h1>
+		<p>A rose is either a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over three hundred species and tens of thousands of cultivars.</p>
+	</div>
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
+
+	
 
 </html>
